# comp_7500_project_3

./: .gitignore  CMakeLists.txt  README.md  build.sh  project_3_mtm0002.md
aubatch/: AU_Batch.c  AU_Batch.h  AU_BatchDriver.c  AU_Batch_test.cpp  CMakeLists.txt
aubatch/execution/: CMakeLists.txt  Execution.c  Execution.h  Execution_fake.c  Execution_test.cpp
aubatch/get_input/: CMakeLists.txt  Get_Input.c  Get_Input.h  Get_Input_fake.c
aubatch/thread_data/: CMakeLists.txt  ThreadData.c  ThreadData.h  ThreadData_fake.c  ThreadData_test.cpp
aubatch/user_interface/: CMakeLists.txt  UserInterface.c  UserInterface.h  UserInterface_fake.c  UserInterface_test.cpp
aubatch/user_interface/command_data/: CMakeLists.txt  CommandData.c  CommandData.h  CommandData_fake.c  CommandData_test.cpp
aubatch/user_interface/dispatch/: CMakeLists.txt  Dispatch.c  Dispatch.h  Dispatch_fake.c  Dispatch_test.cpp
aubatch/user_interface/dispatch/begin_run/: BeginRun.c  BeginRun.h  BeginRun_fake.c  BeginRun_test.cpp  CMakeLists.txt
aubatch/user_interface/dispatch/begin_run/run_fcfs/: CMakeLists.txt  RunFCFS.c  RunFCFS.h  RunFCFS_fake.c  RunFCFS_test.cpp
aubatch/user_interface/dispatch/begin_run/run_priority/: CMakeLists.txt  RunPriority.c  RunPriority.h  RunPriority_fake.c  RunPriority_test.cpp
aubatch/user_interface/dispatch/begin_run/run_sjf/: CMakeLists.txt  RunSJF.c  RunSJF.h  RunSJF_fake.c  RunSJF_test.cpp
aubatch/user_interface/dispatch/list_runs/: CMakeLists.txt  ListRuns.c  ListRuns.h  ListRuns_fake.c  ListRuns_test.cpp
aubatch/user_interface/dispatch/quit_runs/: CMakeLists.txt  QuitRuns.c  QuitRuns.h  QuitRuns_fake.c  QuitRuns_test.cpp
aubatch/user_interface/dispatch/run_test/: CMakeLists.txt  RunTest.c  RunTest.h  RunTest_fake.c  RunTest_test.cpp
aubatch/user_interface/dispatch/show_help/: CMakeLists.txt  ShowHelp.c  ShowHelp.h  ShowHelp_fake.c  ShowHelp_test.cpp
cmake/: Config.h.in  cmake_includes.cmake  compiler.cmake  includes.cmake  libraries.cmake  paths.cmake
